Fix testimonials taking full iwdth of screen on mobile

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -178,6 +178,8 @@ form {
 }
 
 .testimonial-container {
+    padding: 15px;
+
     .card:not(.current-testimonial) {
         display: none;
     }
